bring up to state of aturitmo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,11 +1,12 @@
-file.reference._model_-libs=libs
 file.reference.app-build=app/build
-file.reference.tmproj-_model_=.
+file.reference._model_-libs=libs
+file.reference._model_-nbproject=nbproject
 ignore.path=\
     ${file.reference._model_-libs}:\
     ${file.reference.app-build}
 include.path=\
-    ${file.reference._model_-libs}
+    ${file.reference._model_-libs}:\
+    ${file.reference._model_-nbproject}
 php.version=PHP_53
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
