--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,12 @@
 file.reference.app-build=app/build
-file.reference._model_-libs=libs
-file.reference._model_-nbproject=nbproject
+file.reference.top-libs=libs
+file.reference.top-nbproject=nbproject
 ignore.path=\
-    ${file.reference._model_-libs}:\
+    ${file.reference.top-libs}:\
     ${file.reference.app-build}
 include.path=\
-    ${file.reference._model_-libs}:\
-    ${file.reference._model_-nbproject}
+    ${file.reference.top-libs}:\
+    ${file.reference.top-nbproject}
 php.version=PHP_53
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
