--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "devDependencies": {
         "glob": "~3.2.8",
         "grunt": "~0.4.1",
-        "grunt-autoprefixer": "~0.4.1",
-        "grunt-contrib-compass": "^0.9.1",
         "grunt-contrib-concat": "~0.5.0",
         "grunt-contrib-connect": "~0.5.0",
         "grunt-contrib-jshint": "~0.7.2",
@@ -18,6 +16,7 @@
         "grunt-contrib-watch": "~0.5.3"
     },
     "dependencies": {
+        "grunt-sync": "^0.1.1",
         "load-grunt-tasks": "~0.2.0"
     }
 }
