--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "dependencies": {
         "grunt-sync": "^0.1.1",
         "load-grunt-tasks": "~0.2.0"
-    }
+    },
+    "bases": ["app", ".", "../.."],
+    "group": "wf-ecg/_model_/0",
+    "port0": 7999,
+    "port1": 8999,
+    "zzzzz": 0
 }
