--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "url": "https://github.com/dvdrtrgn/_model_.git"
     },
     "version": "0.1.0",
-    "devDependencies": {
+    "oldDependencies": {
         "glob": "~3.2.8",
         "grunt": "~0.4.1",
         "grunt-contrib-concat": "~0.5.0",
@@ -14,6 +14,15 @@
         "grunt-contrib-sass": "~0.8.1",
         "grunt-contrib-uglify": "~0.3.2",
         "grunt-contrib-watch": "~0.6.1"
+    },
+    "devDependencies": {
+        "gulp": "^3.8.8",
+        "gulp-concat": "^2.4.1",
+        "gulp-jshint": "^1.8.5",
+        "gulp-livereload": "^2.1.1",
+        "gulp-sass": "^1.1.0",
+        "gulp-uglify": "^1.0.1",
+        "gulp-util": "^3.0.1"
     },
     "dependencies": {
         "grunt-sync": "^0.1.1",
