--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "devDependencies": {
         "gulp": "^3.8.8",
         "gulp-concat": "^2.4.1",
+        "gulp-header": "^1.1.1",
         "gulp-jshint": "^1.8.5",
         "gulp-livereload": "^2.1.1",
         "gulp-sass": "^1.1.0",
+        "gulp-serve": "^0.2.0",
         "gulp-uglify": "^1.0.1",
         "gulp-util": "^3.0.1"
     },
