--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
         "url": "https://github.com/dvdrtrgn/_model_.git"
     },
     "version": "0.1.0",
-    "oldDependencies": {
+    "grunt-dependencies": {
+        "grunt-sync": "^0.1.1",
+        "load-grunt-tasks": "~0.2.0"
+    },
+    "grunt-devDependencies": {
         "glob": "~3.2.8",
         "grunt": "~0.4.1",
         "grunt-contrib-concat": "~0.5.0",
@@ -15,8 +19,10 @@
         "grunt-contrib-uglify": "~0.3.2",
         "grunt-contrib-watch": "~0.6.1"
     },
+    "dependencies": {
+        "gulp": "^3.8.8"
+    },
     "devDependencies": {
-        "gulp": "^3.8.8",
         "gulp-concat": "^2.4.1",
         "gulp-header": "^1.1.1",
         "gulp-jshint": "^1.8.5",
@@ -25,10 +31,6 @@
         "gulp-serve": "^0.2.0",
         "gulp-uglify": "^1.0.1",
         "gulp-util": "^3.0.1"
-    },
-    "dependencies": {
-        "grunt-sync": "^0.1.1",
-        "load-grunt-tasks": "~0.2.0"
     },
     "bases": ["app", ".", "../.."],
     "group": "wf-ecg/_model_/0",
