--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "load-grunt-tasks": "~0.2.0"
     },
     "bases": ["app", ".", "../.."],
-    "group": "wf-ecg/_model_/0",
+    "group": "docs/wf-ecg/_model_/0",
     "port0": 7999,
     "port1": 8999,
     "zzzzz": 0
