switch to app model

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,15 +1,16 @@
 file.reference.app-build=app/build
 file.reference.app-vendor=app/vendor
-file.reference.top-libs=libs
+file.reference.top=.
 file.reference.top-nbproject=nbproject
+file.reference.top-scss=scss
 ignore.path=\
     ${file.reference.app-build}:\
-    ${file.reference.app-vendor}:\
-    ${file.reference.top-libs}
+    ${file.reference.app-vendor}
 include.path=\
-    ${file.reference.app-vendor}:\
-    ${file.reference.top-libs}:\
-    ${file.reference.top-nbproject}
+    ${file.reference.top}:\
+    ${file.reference.top-nbproject}:\
+    ${file.reference.app-build}:\
+    ${file.reference.app-vendor}
 php.version=PHP_53
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
@@ -18,8 +19,8 @@ phpunit.run.test.files=false
 phpunit.suite=
 phpunit.test.groups.ask=false
 source.encoding=UTF-8
-src.dir=.
+src.dir=app
 tags.asp=false
 tags.short=false
 test.src.dir=tasks
-web.root=app
+web.root=.
