--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,26 +1,37 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-javascript-grunt.action_2e_build=default
+auxiliary.org-netbeans-modules-javascript-grunt.action_2e_rebuild=package
+auxiliary.org-netbeans-modules-javascript-nodejs.enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-javascript2-requirejs.mappings={ven , app/vendor}
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=scripts/libs
+browser.autorefresh.Chrome=true
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
+file.reference.app=app
 file.reference.app-build=app/build
 file.reference.app-vendor=app/vendor
+file.reference._model_-app=app
+file.reference._model_-scss=scss
 file.reference.top=.
 file.reference.top-nbproject=nbproject
 file.reference.top-scss=scss
-ignore.path=\
-    ${file.reference.app-build}:\
-    ${file.reference.app-vendor}
-include.path=\
-    ${file.reference.top}:\
-    ${file.reference.top-nbproject}:\
-    ${file.reference.app-build}:\
-    ${file.reference.app-vendor}
-php.version=PHP_53
-phpunit.bootstrap=
-phpunit.bootstrap.create.tests=false
-phpunit.configuration=
-phpunit.run.test.files=false
-phpunit.suite=
-phpunit.test.groups.ask=false
+files.encoding=UTF-8
+ignore.path=${file.reference.app-build}:${file.reference.app-vendor}
+include.path=${file.reference.top}:${file.reference.top-nbproject}
+site.root.folder=${file.reference._model_-app}
 source.encoding=UTF-8
-src.dir=app
-tags.asp=false
-tags.short=false
-test.src.dir=tasks
-web.root=.
+source.folder=${file.reference._model_-scss}
+start.file=index.html
+web.context.root=/wf-ecg/_model_/0/
