--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
         "url": "https://github.com/dvdrtrgn/_model_.git"
     },
     "version": "0.1.0",
-    "devDependencies": {
-        "glob": "~3.2.8",
-        "grunt": "~0.4.1",
-        "grunt-contrib-concat": "~0.5.0",
-        "grunt-contrib-connect": "~0.5.0",
-        "grunt-contrib-jshint": "~0.7.2",
-        "grunt-contrib-sass": "~0.8.1",
-        "grunt-contrib-uglify": "~0.3.2",
-        "grunt-contrib-watch": "~0.6.1"
-    },
+    "devDependencies": {},
     "dependencies": {
+        "glob": "~3.2.8",
+        "grunt": "^0.4.5",
+        "grunt-contrib-concat": "^0.5.1",
+        "grunt-contrib-connect": "~0.5.0",
+        "grunt-contrib-jshint": "^0.7.2",
+        "grunt-contrib-qunit": "^0.7.0",
+        "grunt-contrib-requirejs": "^0.4.4",
+        "grunt-contrib-sass": "^0.8.1",
+        "grunt-contrib-uglify": "^0.3.3",
+        "grunt-contrib-watch": "~0.6.1",
         "grunt-sync": "^0.1.1",
         "load-grunt-tasks": "~0.2.0"
     },
-    "bases": ["app", ".", "../.."],
+    "bases": [
+        "app",
+        ".",
+        "../.."
+    ],
     "group": "docs/wf-ecg/_model_/0",
     "port0": 7999,
     "port1": 8999,
